# husky

./: CMakeLists.txt  sexec.sh
base/: generation_lock.cpp  generation_lock.hpp  log.cpp  session_local.cpp  session_local.hpp  thread_support.cpp  thread_support.hpp
bindings/: CMakeLists.txt  daemon.cpp  frontend_master_handlers.cpp  frontend_master_handlers.hpp  itc.cpp  itc.hpp  job.cpp  job.hpp  job_handler.cpp  loader.py  opdag.cpp  opdag.hpp  operation.cpp  opsplitter.cpp  opsplitter.hpp  optimizer.cpp  optimizer.hpp  pyhusky.sh  task.hpp
bindings/backend/: CMakeLists.txt  daemondriver.cpp  daemondriver.hpp  master_handler.cpp  pythonconnector.cpp  pythonconnector.hpp  threadconnector.cpp  threadconnector.hpp  workerdriver.cpp  workerdriver.hpp
bindings/backend/python/: globalvar.py  processor.py  python_backend.py
bindings/frontend/: datareceiver.py  env.py  scheduler.py  session.py
core/: CMakeLists.txt  accessor_store.hpp  config.cpp  config.hpp  constants.hpp  context.cpp  context.hpp  executor.hpp  job_runner.cpp  mailbox.cpp  mailbox.hpp  mailbox_unittest.cpp  objlist_store.cpp  objlist_store.hpp  shard.cpp  shard.hpp  shuffle_combiner_base.hpp  sync_shuffle_combiner.hpp  utils.hpp  worker_info.cpp  worker_info.hpp
core/channel/: aggregator_channel.cpp  aggregator_channel.hpp  async_migrate_channel.hpp  async_migrate_channel_unittest.cpp  async_push_channel.hpp  broadcast_channel.hpp  broadcast_channel_unittest.cpp  channel_base.cpp  channel_base.hpp  channel_factory_base.cpp  channel_manager.hpp  channel_source.hpp  channel_store.hpp  channel_store_base.cpp  channel_store_base.hpp  channel_store_base_unittest.cpp  migrate_channel.hpp  migrate_channel_unittest.cpp  push_channel.hpp  push_channel_unittest.cpp  push_combined_channel.hpp
examples/: aggregator.cpp  pagerank.cpp  pi.cpp
examples/py/: pyhusky_linear_regression.py  pyhusky_logistic_regression.py  pyhusky_svm.py
io/input/: file_inputformat_impl.hpp  file_splitter_base.hpp  hdfs_file_splitter.cpp  hdfs_file_splitter.hpp  inputformat_base.hpp  inputformat_store.cpp  inputformat_store.hpp  line_inputformat.cpp  nfs_file_splitter.cpp  nfs_file_splitter.hpp
io/output/: mongodb_outputformat.cpp  mongodb_outputformat.hpp
lib/: CMakeLists.txt  aggregator_factory.cpp  aggregator_factory.hpp  thirdparty.cmake  thirdparty_dummy.cpp
lib/ml/: data_loader.hpp  regression.hpp
master/: CMakeLists.txt  hdfs_assigner.cpp  hdfs_assigner.hpp  master.cpp  master.hpp  nfs_assigner.cpp  nfs_assigner.hpp  proc_port_collector.cpp  proc_port_collector.hpp
